Security_Chapter/NetworkPolicy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: test-pd
  labels:
    app: test-pd
spec:
  containers:
  - image: centos:7
    name: test-container
    command: ["sleep", "36000"]
